# gstreamer-sdk

./: CMakeLists.txt  CameraSDK.cpp  README.md
Base/: TimeUtil.cpp  gstUtils.cpp
Camera/: CameraOption.cpp  CameraOption.h  gstCamera.cpp
CameraSDK-master/: CameraSDK.h  CameraSDKDefine.h
CameraSDK-master/Base/: TimeUtil.h  gstUtils.h
CameraSDK-master/Camera/: gstCamera.h
CameraSDK-master/Code/: CodeOption.cpp  CodeOption.h  gstEncoder.cpp
CameraSDK-master/Demo/: gstDisplay.h
CameraSDK-master/Demo/TestCamera/: TestCamera.cpp
CameraSDK-master/Demo/TestEncode/: TestEncoder.cpp  TestPlayView.cpp  TestTimer.cpp
Code/: gstEncoder.h
Demo/: gstDisplay.cpp
Demo/TestCamera/: CMakeLists.txt
Demo/TestEncode/: CMakeLists.txt
